Update config for tmux 2.4

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,8 +17,8 @@ unbind [
 bind ` copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-selection
 bind v split-window -h
 bind s split-window
 
