Increase tmux history to 10000 lines

--- a/tmux.conf
+++ b/tmux.conf
@@ -42,6 +42,8 @@ bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 set -g mouse on
 
+set -g history-limit 10000
+
 ##CLIPBOARD selection integration
 ##Requires prefix key before the command key
 #Copy tmux paste buffer to CLIPBOARD
