--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,6 @@
 set -g default-terminal "screen-256color"
 set -g default-command "exec /bin/bash"
+set -g renumber-windows on
 
 # Act like GNU screen
 unbind C-b
