--- a/tmux.conf
+++ b/tmux.conf
@@ -14,6 +14,8 @@ bind k select-pane -U
 bind l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
+bind-key -r C-M-h swap-window -t :-
+bind-key -r C-M-l swap-window -t :+
 unbind [
 bind ` copy-mode
 unbind p
